Huge update: Modularize large chunks of BSSN, fix many little bugs.

--- a/Tutorial-ETK_thorn-Weyl_Scalars_and_Spacetime_Invariants.ipynb
+++ b/Tutorial-ETK_thorn-Weyl_Scalars_and_Spacetime_Invariants.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,10 +93,10 @@
     "               lhrh(lhs=gri.gfaccess(\"out_gfs\",\"curvIi\"),rhs=invar.curvIi),\\\n",
     "               lhrh(lhs=gri.gfaccess(\"out_gfs\",\"curvJr\"),rhs=invar.curvJr),\\\n",
     "               lhrh(lhs=gri.gfaccess(\"out_gfs\",\"curvJi\"),rhs=invar.curvJi),\\\n",
-    "               lhrh(lhs=gri.gfaccess(\"out_gfs\",\"curvJ1\"),rhs=invar.curvJ1),\\\n",
-    "               lhrh(lhs=gri.gfaccess(\"out_gfs\",\"curvJ2\"),rhs=invar.curvJ2),\\\n",
-    "               lhrh(lhs=gri.gfaccess(\"out_gfs\",\"curvJ3\"),rhs=invar.curvJ3),\\\n",
-    "               lhrh(lhs=gri.gfaccess(\"out_gfs\",\"curvJ4\"),rhs=invar.curvJ4),]\n",
+    "               lhrh(lhs=gri.gfaccess(\"out_gfs\",\"J1curv\"),rhs=invar.J1curv),\\\n",
+    "               lhrh(lhs=gri.gfaccess(\"out_gfs\",\"J2curv\"),rhs=invar.J2curv),\\\n",
+    "               lhrh(lhs=gri.gfaccess(\"out_gfs\",\"J3curv\"),rhs=invar.J3curv),\\\n",
+    "               lhrh(lhs=gri.gfaccess(\"out_gfs\",\"J4curv\"),rhs=invar.J4curv),]\n",
     "invars_CcodeKernel = fin.FD_outputC(\"returnstring\",invars_lhrh,params=\"outCverbose=False\")\n",
     "\n",
     "invars_looped = loop.loop([\"i2\",\"i1\",\"i0\"],[\"2\",\"2\",\"2\"],[\"cctk_lsh[2]-2\",\"cctk_lsh[1]-2\",\"cctk_lsh[0]-2\"],\\\n",
@@ -119,9 +119,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing WeylScal4NRPy/src/WeylScal4NRPy.c\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile WeylScal4NRPy/src/WeylScal4NRPy.c\n",
     "\n",
@@ -158,8 +166,8 @@
     "                 const CCTK_REAL *psi0rGF,const CCTK_REAL *psi0iGF,\n",
     "                 CCTK_REAL *curvIrGF,CCTK_REAL *curvIiGF,\n",
     "                 CCTK_REAL *curvJrGF,CCTK_REAL *curvJiGF,\n",
-    "                 CCTK_REAL *curvJ1GF,CCTK_REAL *curvJ2GF,\n",
-    "                 CCTK_REAL *curvJ3GF,CCTK_REAL *curvJ4GF)  {\n",
+    "                 CCTK_REAL *J1curvGF,CCTK_REAL *J2curvGF,\n",
+    "                 CCTK_REAL *J3curvGF,CCTK_REAL *J4curvGF)  {\n",
     "  \n",
     "    DECLARE_CCTK_PARAMETERS;\n",
     "\n",
@@ -199,8 +207,8 @@
     "                psi0r,psi0i,\n",
     "                NRPycurvIr,NRPycurvIi,\n",
     "                NRPycurvJr,NRPycurvJi,\n",
-    "                NRPycurvJ1,NRPycurvJ2,\n",
-    "                NRPycurvJ3,NRPycurvJ4);\n",
+    "                NRPyJ1curv,NRPyJ2curv,\n",
+    "                NRPyJ3curv,NRPyJ4curv);\n",
     "    }\n",
     "\n",
     "}\n"
@@ -223,9 +231,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing WeylScal4NRPy/interface.ccl\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile WeylScal4NRPy/interface.ccl\n",
     "\n",
@@ -257,7 +273,7 @@
     "public:\n",
     "CCTK_REAL NRPyInvars_group type=GF timelevels=3 tags='tensortypealias=\"Scalar\" tensorweight=0 tensorparity=1'\n",
     "{\n",
-    "  NRPycurvIr,NRPycurvIi,NRPycurvJr,NRPycurvJi,NRPycurvJ1,NRPycurvJ2,NRPycurvJ3,NRPycurvJ4\n",
+    "  NRPycurvIr,NRPycurvIi,NRPycurvJr,NRPycurvJi,NRPyJ1curv,NRPyJ2curv,NRPyJ3curv,NRPyJ4curv\n",
     "} \"NRPyInvars_group\""
    ]
   },
@@ -274,9 +290,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing WeylScal4NRPy/param.ccl\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile WeylScal4NRPy/param.ccl\n",
     "\n",
@@ -310,9 +334,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing WeylScal4NRPy/schedule.ccl\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile WeylScal4NRPy/schedule.ccl\n",
     "\n",
@@ -362,10 +394,10 @@
     "  WRITES: WeylScal4::NRPycurvIr(Interior)\n",
     "  WRITES: WeylScal4::NRPycurvJi(Interior)\n",
     "  WRITES: WeylScal4::NRPycurvJr(Interior)\n",
-    "  WRITES: WeylScal4::NRPycurvJ1(Interior)\n",
-    "  WRITES: WeylScal4::NRPycurvJ2(Interior)\n",
-    "  WRITES: WeylScal4::NRPycurvJ3(Interior)\n",
-    "  WRITES: WeylScal4::NRPycurvJ4(Interior)\n",
+    "  WRITES: WeylScal4::NRPyJ1curv(Interior)\n",
+    "  WRITES: WeylScal4::NRPyJ2curv(Interior)\n",
+    "  WRITES: WeylScal4::NRPyJ3curv(Interior)\n",
+    "  WRITES: WeylScal4::NRPyJ4curv(Interior)\n",
     "\n",
     "} \"Call WeylScal4NRPy main function\"\n"
    ]
@@ -381,9 +413,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing WeylScal4NRPy/src/make.code.defn\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile WeylScal4NRPy/src/make.code.defn\n",
     "\n",
