--- a/Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_two_BH_initial_data.ipynb
+++ b/Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_two_BH_initial_data.ipynb
@@ -48,8 +48,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::M_PI\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::RMAX\n",
       "Wrote to file \"BSSN/xxCart.h\"\n"
      ]
     }
@@ -72,12 +70,6 @@
     "par.set_parval_from_str(\"reference_metric::CoordSystem\",\"Spherical\")\n",
     "rfm.reference_metric() # Create ReU, ReDD needed for rescaling B-L initial data, generating BSSN RHSs, etc.\n",
     "\n",
-    "# We will need the h_{ij} quantities defined within BSSN_RHSs \n",
-    "#    below when we enforce the gammahat=gammabar constraint\n",
-    "import BSSN.BSSN_RHSs as rhs\n",
-    "rhs.BSSN_RHSs()\n",
-    "\n",
-    "\n",
     "#################\n",
     "# Next output C headers related to the numerical grids we just set up:\n",
     "#################\n",
@@ -89,10 +81,7 @@
     "\n",
     "# Generic coordinate NRPy+ file output, Part 2: output the conversion from (x0,x1,x2) to Cartesian (x,y,z)\n",
     "outputC([rfm.xxCart[0],rfm.xxCart[1],rfm.xxCart[2]],[\"xCart[0]\",\"xCart[1]\",\"xCart[2]\"],\n",
-    "        \"BSSN/xxCart.h\")\n",
-    "\n",
-    "# Register the Hamiltonian as a gridfunction, to be used later.\n",
-    "H = gri.register_gridfunctions(\"AUX\",\"H\")"
+    "        \"BSSN/xxCart.h\")"
    ]
   },
   {
@@ -125,16 +114,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Apply singular, curvilinear coordinate boundary conditions [as documented in the NRPy+ tutorial module](Tutorial-Start_to_Finish-Curvilinear_BCs.ipynb)\n",
+    "## We will validate that the Brill-Lindquist black hole initial data satisfy the Hamiltonian constraint, modulo numerical finite differencing error\n",
     "\n",
-    "After setting the gridfunctions to their initial values, we must next apply boundary conditions, as initial data are sometimes ill-defined in ghost zones. E.g., spherical initial data might not be properly defined at points where r=-1.\n",
-    "\n",
-    "Admittedly this is not as much a concern with initial data originally defined in a Cartesian basis. Applying these boundary conditions should affect the initial data at the outer boundary, and will in general cause the $\\det{\\bar{\\gamma}_{ij}}=\\det{\\hat{\\gamma}_{ij}}$ constraint to be violated there. Thus after we apply these boundary conditions, we must always call the routine for enforcing the $\\det{\\bar{\\gamma}_{ij}}=\\det{\\hat{\\gamma}_{ij}}$ constraint."
+    "### First output the Hamiltonian constraint:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generating optimized C code for Hamiltonian constraint. May take a while, depending on CoordSystem.\n",
+      "Finished in 13.7354981899 seconds.\n",
+      "Output C implementation of Hamiltonian constraint to BSSN/Hamiltonian.h\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Register the Hamiltonian as a gridfunction.\n",
+    "H = gri.register_gridfunctions(\"AUX\",\"H\")\n",
+    "import BSSN.BSSNConstraints as bssncon\n",
+    "bssncon.output_C__Hamiltonian_h(add_T4UUmunu_source_terms=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Next apply singular, curvilinear coordinate boundary conditions [as documented in the corresponding NRPy+ tutorial module](Tutorial-Start_to_Finish-Curvilinear_BCs.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -143,9 +159,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Wrote to file \"CurviBoundaryConditions/gridfunction_defines.h\"\n",
       "Wrote to file \"CurviBoundaryConditions/set_parity_conditions.h\"\n",
       "Wrote to file \"CurviBoundaryConditions/xxCart.h\"\n",
-      "Appended to file \"CurviBoundaryConditions/Cart_to_xx.h\"\n"
+      "Wrote to file \"CurviBoundaryConditions/xxminmax.h\"\n",
+      "Wrote to file \"CurviBoundaryConditions/Cart_to_xx.h\"\n"
      ]
     }
    ],
@@ -158,84 +176,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Enforce conformal 3-metric $\\det{\\bar{\\gamma}_{ij}}=\\det{\\hat{\\gamma}_{ij}}$ constraint (Eq. 53 of [Ruchlin, Etienne, and Baumgarte (2018)](https://arxiv.org/abs/1712.07658))\n",
+    "### Then enforce conformal 3-metric $\\det{\\bar{\\gamma}_{ij}}=\\det{\\hat{\\gamma}_{ij}}$ constraint (Eq. 53 of [Ruchlin, Etienne, and Baumgarte (2018)](https://arxiv.org/abs/1712.07658)), as [documented in the corresponding NRPy+ tutorial module](Tutorial-BSSN-Enforcing_Determinant_gammabar_equals_gammahat_Constraint.ipynb)\n",
     "\n",
-    "As mentioned in the [BSSN curvilinear tutorial module](Tutorial-BSSNCurvilinear.ipynb), the adopted formulation of Einstein's equations requires that $\\partial_t \\bar{\\gamma} = 0$, where $\\bar{\\gamma}=\\det \\bar{\\gamma}_{ij}$. Further, all initial data we choose satisfies $\\bar{\\gamma}=\\hat{\\gamma}$. \n",
-    "\n",
-    "However, numerical errors will cause $\\bar{\\gamma}$ to deviate from a constant in time. This actually disrupts the hyperbolicity of the PDEs, so to cure this, we adjust $\\bar{\\gamma}_{ij}$ at the end of each Runge-Kutta timestep, so that its determinant satisfies $\\bar{\\gamma}=\\hat{\\gamma}$ at all times. We adopt the following, rather standard prescription (Eq. 53 of [Ruchlin, Etienne, and Baumgarte (2018)](https://arxiv.org/abs/1712.07658)):\n",
-    "\n",
-    "$$\n",
-    "\\bar{\\gamma}_{ij} \\to \\left(\\frac{\\hat{\\gamma}}{\\bar{\\gamma}}\\right)^{1/3} \\bar{\\gamma}_{ij}.\n",
-    "$$\n",
-    "Notice the expression on the right is guaranteed to have determinant equal to $\\hat{\\gamma}$.\n",
-    "\n",
-    "Unfortunately $\\bar{\\gamma}_{ij}$ is not an evolved variable, so we must rewrite the above in terms of $h_{ij}$:\n",
-    "\\begin{align}\n",
-    "\\left(\\frac{\\hat{\\gamma}}{\\bar{\\gamma}}\\right)^{1/3} \\bar{\\gamma}_{ij} &= \\bar{\\gamma}'_{ij}  \\\\\n",
-    "&= \\hat{\\gamma}_{ij} + \\varepsilon'_{ij} \\\\\n",
-    "&= \\hat{\\gamma}_{ij} + \\text{Re[i][j]} h'_{ij} \\\\\n",
-    "\\implies h'_{ij} &= \\left[\\left(\\frac{\\hat{\\gamma}}{\\bar{\\gamma}}\\right)^{1/3} \\bar{\\gamma}_{ij} - \\hat{\\gamma}_{ij}\\right] / \\text{Re[i][j]} \\\\\n",
-    "&= \\left(\\frac{\\hat{\\gamma}}{\\bar{\\gamma}}\\right)^{1/3} \\frac{\\bar{\\gamma}_{ij}}{\\text{Re[i][j]}} - \\delta_{ij}\\\\\n",
-    "&= \\left(\\frac{\\hat{\\gamma}}{\\bar{\\gamma}}\\right)^{1/3} \\frac{\\hat{\\gamma}_{ij} + \\text{Re[i][j]} h_{ij}}{\\text{Re[i][j]}} - \\delta_{ij}\\\\\n",
-    "&= \\left(\\frac{\\hat{\\gamma}}{\\bar{\\gamma}}\\right)^{1/3} \\left(\\delta_{ij} + h_{ij}\\right) - \\delta_{ij}\n",
-    "\\end{align}\n",
-    "\n",
-    "Upon inspection, when expressing $\\hat{\\gamma}$ SymPy generates expressions like $\\text{(xx0)}^{4/3}=\\text{pow(xx0, 4./3.)}$, which can yield $\\text{NaN}$s when $\\text{xx0}<0$ (i.e., in the $\\text{xx0}$ ghost zones). To prevent this, we know that $\\hat{\\gamma}\\ge 0$ for all reasonable coordinate systems, so we make the replacement $\\hat{\\gamma}\\to |\\hat{\\gamma}|$ below:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# First define the Kronecker delta:\n",
-    "KroneckerDeltaDD = ixp.zerorank2()\n",
-    "for i in range(DIM):\n",
-    "    KroneckerDeltaDD[i][i] = sp.sympify(1)\n",
-    "\n",
-    "# The detgammabar in BSSN_RHSs is set to detgammahat when BSSN_RHSs::detgbarOverdetghat_equals_one=True (default),\n",
-    "#    so we manually compute it here:\n",
-    "dummygammabarUU, detgammabar = ixp.symm_matrix_inverter3x3(rhs.gammabarDD)\n",
-    "\n",
-    "# Next apply the constraint enforcement equation above.\n",
-    "hprimeDD = ixp.zerorank2()\n",
-    "for i in range(DIM):\n",
-    "    for j in range(DIM):\n",
-    "        hprimeDD[i][j] = \\\n",
-    "        (sp.Abs(rfm.detgammahat)/detgammabar)**(sp.Rational(1,3)) * (KroneckerDeltaDD[i][j] + rhs.hDD[i][j]) \\\n",
-    "        - KroneckerDeltaDD[i][j]\n",
-    "\n",
-    "enforce_detg_constraint_vars = [ \\\n",
-    "                                lhrh(lhs=gri.gfaccess(\"in_gfs\",\"hDD00\"),rhs=hprimeDD[0][0]),\n",
-    "                                lhrh(lhs=gri.gfaccess(\"in_gfs\",\"hDD01\"),rhs=hprimeDD[0][1]),\n",
-    "                                lhrh(lhs=gri.gfaccess(\"in_gfs\",\"hDD02\"),rhs=hprimeDD[0][2]),\n",
-    "                                lhrh(lhs=gri.gfaccess(\"in_gfs\",\"hDD11\"),rhs=hprimeDD[1][1]),\n",
-    "                                lhrh(lhs=gri.gfaccess(\"in_gfs\",\"hDD12\"),rhs=hprimeDD[1][2]),\n",
-    "                                lhrh(lhs=gri.gfaccess(\"in_gfs\",\"hDD22\"),rhs=hprimeDD[2][2]) ]\n",
-    "\n",
-    "enforce_gammadet_string = fin.FD_outputC(\"returnstring\",enforce_detg_constraint_vars,\n",
-    "                                         params=\"outCverbose=False,preindent=0,includebraces=False\")\n",
-    "\n",
-    "with open(\"BSSN/enforce_detgammabar_constraint.h\", \"w\") as file:\n",
-    "    indent = \"   \"\n",
-    "    file.write(\"void enforce_detgammabar_constraint(const int Nxx_plus_2NGHOSTS[3],REAL *xx[3], REAL *in_gfs) {\\n\\n\")\n",
-    "    file.write(lp.loop([\"i2\",\"i1\",\"i0\"],[\"0\",\"0\",\"0\"],\n",
-    "                       [\"Nxx_plus_2NGHOSTS[2]\",\"Nxx_plus_2NGHOSTS[1]\",\"Nxx_plus_2NGHOSTS[0]\"],\n",
-    "                       [\"1\",\"1\",\"1\"],[\"#pragma omp parallel for\",\n",
-    "                                      \"    const REAL xx2 = xx[2][i2];\",\n",
-    "                                      \"        const REAL xx1 = xx[1][i1];\"],\"\",\n",
-    "                                     \"const REAL xx0 = xx[0][i0];\\n\"+enforce_gammadet_string))\n",
-    "    file.write(\"}\\n\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Validate that the Brill-Lindquist initial data satisfy the Hamiltonian constraint, modulo numerical finite differencing error\n",
-    "\n",
-    "### First output the Hamiltonian constraint:"
+    "Applying curvilinear boundary conditions should affect the initial data at the outer boundary, and will in general cause the $\\det{\\bar{\\gamma}_{ij}}=\\det{\\hat{\\gamma}_{ij}}$ constraint to be violated there. Thus after we apply these boundary conditions, we must always call the routine for enforcing the $\\det{\\bar{\\gamma}_{ij}}=\\det{\\hat{\\gamma}_{ij}}$ constraint:"
    ]
   },
   {
@@ -247,34 +190,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finished in 15.1623699665 seconds.\n"
+      "Output C implementation of det(gammabar) constraint to file BSSN/enforce_detgammabar_constraint.h\n"
      ]
     }
    ],
    "source": [
-    "from outputC import *\n",
-    "import grid as gri\n",
-    "import BSSN.BSSNConstraints as bssncon\n",
-    "bssncon.BSSNConstraints()\n",
-    "\n",
-    "import time\n",
-    "start = time.time()\n",
-    "Hamiltonianstring = fin.FD_outputC(\"returnstring\",lhrh(lhs=gri.gfaccess(\"aux_gfs\",\"H\"),rhs=bssncon.H), \n",
-    "                                   params=\"outCverbose=False\")\n",
-    "end = time.time()\n",
-    "print(\"Finished in \"+str(end-start)+\" seconds.\")\n",
-    "\n",
-    "import loop as lp\n",
-    "with open(\"BSSN/Hamiltonian.h\", \"w\") as file:\n",
-    "    file.write(lp.loop([\"i2\",\"i1\",\"i0\"],[\"NGHOSTS\",\"NGHOSTS\",\"NGHOSTS\"],\n",
-    "                       [\"NGHOSTS+Nxx[2]\",\"NGHOSTS+Nxx[1]\",\"NGHOSTS+Nxx[0]\"],\n",
-    "                       [\"1\",\"1\",\"1\"],[\"const REAL invdx0 = 1.0/dxx[0];\\n\"+\n",
-    "                                      \"const REAL invdx1 = 1.0/dxx[1];\\n\"+\n",
-    "                                      \"const REAL invdx2 = 1.0/dxx[2];\\n\"+\n",
-    "                                      \"#pragma omp parallel for\",\n",
-    "                                      \"    const REAL xx2 = xx[2][i2];\",\n",
-    "                                      \"        const REAL xx1 = xx[1][i1];\"],\"\",\n",
-    "                                     \"const REAL xx0 = xx[0][i0];\\n\"+Hamiltonianstring))"
+    "import BSSN.Enforce_Detgammabar_Constraint as EGC\n",
+    "EGC.output_Enforce_Detgammabar_Constraint_Ccode()"
    ]
   },
   {
@@ -306,7 +228,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing BSSN/BrillLindquist_Playground.c\n"
+      "Overwriting BSSN/BrillLindquist_Playground.c\n"
      ]
     }
    ],
@@ -521,7 +443,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[33mYou are using pip version 18.1, however version 19.0.1 is available.\r\n",
+      "\u001b[33mYou are using pip version 18.1, however version 19.0.3 is available.\r\n",
       "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\r\n"
      ]
     }
