--- a/Tutorial-WeylScalarsInvariants-Cartesian.ipynb
+++ b/Tutorial-WeylScalarsInvariants-Cartesian.ipynb
@@ -116,10 +116,10 @@
     "                                                                                                \"psi2r\",\"psi2i\",\\\n",
     "                                                                                                \"psi1r\",\"psi1i\",\\\n",
     "                                                                                                \"psi0r\",\"psi0i\"])\n",
-    "curvIr,curvIi,curvJr,curvJi,curvJ1,curvJ2,curvJ3,curvJ4 = gri.register_gridfunctions(\"AUX\",[\"curvIr\",\"curvIi\",\\\n",
+    "curvIr,curvIi,curvJr,curvJi,J1curv,J2curv,J3curv,J4curv = gri.register_gridfunctions(\"AUX\",[\"curvIr\",\"curvIi\",\\\n",
     "                                                                                            \"curvJr\",\"curvJi\",\\\n",
-    "                                                                                            \"curvJ1\",\"curvJ2\",\\\n",
-    "                                                                                            \"curvJ3\",\"curvJ4\"])"
+    "                                                                                            \"J1curv\",\"J2curv\",\\\n",
+    "                                                                                            \"J3curv\",\"J4curv\"])"
    ]
   },
   {
@@ -736,14 +736,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "curvJ1 =-16*(3*psi2i**2-3*psi2r**2-4*psi1i*psi3i+4*psi1r*psi3r+psi0i*psi4i-psi0r*psi4r)\n",
+    "J1curv =-16*(3*psi2i**2-3*psi2r**2-4*psi1i*psi3i+4*psi1r*psi3r+psi0i*psi4i-psi0r*psi4r)\n",
     "\n",
-    "curvJ2 = 96*(-3*psi2i**2*psi2r+psi2r**3+2*psi1r*psi2i*psi3i+2*psi1i*psi2r*psi3i-psi0r*psi3i**2+\\\n",
+    "J2curv = 96*(-3*psi2i**2*psi2r+psi2r**3+2*psi1r*psi2i*psi3i+2*psi1i*psi2r*psi3i-psi0r*psi3i**2+\\\n",
     "            2*psi1i*psi2i*psi3r-2*psi1r*psi2r*psi3r-2*psi0i*psi3i*psi3r+psi0r*psi3r**2-\\\n",
     "            2*psi1i*psi1r*psi4i+psi0r*psi2i*psi4i+psi0i*psi2r*psi4i-psi1i**2*psi4r+psi1r**2*psi4r+\\\n",
     "            psi0i*psi2i*psi4r-psi0r*psi2r*psi4r)\n",
     "\n",
-    "curvJ3 = 64*(9*psi2i**4-54*psi2i**2*psi2r**2+9*psi2r**4-24*psi1i*psi2i**2*psi3i+48*psi1r*psi2i*psi2r*psi3i+\\\n",
+    "J3curv = 64*(9*psi2i**4-54*psi2i**2*psi2r**2+9*psi2r**4-24*psi1i*psi2i**2*psi3i+48*psi1r*psi2i*psi2r*psi3i+\\\n",
     "            24*psi1i*psi2r**2*psi3i+16*psi1i**2*psi3i**2-16*psi1r**2*psi3i**2+\\\n",
     "            24*psi1r*psi2i**2*psi3r+48*psi1i*psi2i*psi2r*psi3r-24*psi1r*psi2r**2*psi3r-64*psi1i*psi1r*psi3i*psi3r-\\\n",
     "            16*psi1i**2*psi3r**2+16*psi1r**2*psi3r**2+6*psi0i*psi2i**2*psi4i-12*psi0r*psi2i*psi2r*psi4i-\\\n",
@@ -753,7 +753,7 @@
     "            8*psi0i*psi1i*psi3r*psi4r-8*psi0r*psi1r*psi3r*psi4r-4*psi0i*psi0r*psi4i*psi4r-psi0i**2*psi4r**2+\\\n",
     "            psi0r**2*psi4r**2)\n",
     "\n",
-    "curvJ4 = -640*(-15*psi2i**4*psi2r+30*psi2i**2*psi2r**3-3*psi2r**5+10*psi1r*psi2i**3*psi3i+\\\n",
+    "J4curv = -640*(-15*psi2i**4*psi2r+30*psi2i**2*psi2r**3-3*psi2r**5+10*psi1r*psi2i**3*psi3i+\\\n",
     "              30*psi1i*psi2i**2*psi2r*psi3i-30*psi1r*psi2i*psi2r**2*psi3i-10*psi1i*psi2r**3*psi3i-\\\n",
     "              16*psi1i*psi1r*psi2i*psi3i**2-3*psi0r*psi2i**2*psi3i**2-8*psi1i**2*psi2r*psi3i**2+\\\n",
     "              8*psi1r**2*psi2r*psi3i**2-6*psi0i*psi2i*psi2r*psi3i**2+3*psi0r*psi2r**2*psi3i**2+\\\n",
@@ -804,7 +804,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that we have constructed these scalars, we can show that these equations are equivalent to the same expressions provided in the NRPy+ module [WeylScalars_Cartesian.py](WeylScal4NRPy/WeylScalars_Cartesian.py)"
+    "Now that we have constructed these scalars, we can show that these equations are equivalent to the same expressions provided in the NRPy+ module [WeylScalarInvariants_Cartesian.py](../edit/WeylScal4NRPy/WeylScalarInvariants_Cartesian.py)"
    ]
   },
   {
@@ -821,10 +821,10 @@
       "curvIi - weyl.curvIi = 0\n",
       "curvJr - weyl.curvJr = 0\n",
       "curvJi - weyl.curvJi = 0\n",
-      "curvJ1 - weyl.curvJ1 = 0\n",
-      "curvJ2 - weyl.curvJ2 = 0\n",
-      "curvJ3 - weyl.curvJ3 = 0\n",
-      "curvJ4 - weyl.curvJ4 = 0\n"
+      "J1curv - weyl.J1curv = 0\n",
+      "J2curv - weyl.J2curv = 0\n",
+      "J3curv - weyl.J3curv = 0\n",
+      "J4curv - weyl.J4curv = 0\n"
      ]
     }
    ],
@@ -846,10 +846,10 @@
     "print(\"curvIi - weyl.curvIi = \" + str(curvIi - invar.curvIi))\n",
     "print(\"curvJr - weyl.curvJr = \" + str(curvJr - invar.curvJr))\n",
     "print(\"curvJi - weyl.curvJi = \" + str(curvJi - invar.curvJi))\n",
-    "print(\"curvJ1 - weyl.curvJ1 = \" + str(curvJ1 - invar.curvJ1))\n",
-    "print(\"curvJ2 - weyl.curvJ2 = \" + str(curvJ2 - invar.curvJ2))\n",
-    "print(\"curvJ3 - weyl.curvJ3 = \" + str(curvJ3 - invar.curvJ3))\n",
-    "print(\"curvJ4 - weyl.curvJ4 = \" + str(curvJ4 - invar.curvJ4))\n"
+    "print(\"J1curv - weyl.J1curv = \" + str(J1curv - invar.J1curv))\n",
+    "print(\"J2curv - weyl.J2curv = \" + str(J2curv - invar.J2curv))\n",
+    "print(\"J3curv - weyl.J3curv = \" + str(J3curv - invar.J3curv))\n",
+    "print(\"J4curv - weyl.J4curv = \" + str(J4curv - invar.J4curv))"
    ]
   }
  ],
