--- a/Tutorial-ADM_Initial_Data-Converting_Numerical_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear.ipynb
+++ b/Tutorial-ADM_Initial_Data-Converting_Numerical_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear.ipynb
@@ -57,7 +57,11 @@
     "\n",
     "# Set the desired *output* coordinate system to Cylindrical:\n",
     "par.set_parval_from_str(\"reference_metric::CoordSystem\",\"Cylindrical\")\n",
-    "rfm.reference_metric()"
+    "rfm.reference_metric()\n",
+    "\n",
+    "# Set function input parameters to consistent defaults.\n",
+    "ADM_input_function_name = \"ID_ADM_SphorCart\"\n",
+    "pointer_to_ID_inputs = False"
    ]
   },
   {
@@ -85,11 +89,11 @@
     "import BSSN.UIUCBlackHole as uibh\n",
     "uibh.UIUCBlackHole(ComputeADMGlobalsOnly=True)\n",
     "\n",
-    "with open(\"BSSN/ID_ADM_SphorCart.h\", \"w\") as file:\n",
+    "with open(\"BSSN/\"+ADM_input_function_name+\".h\", \"w\") as file:\n",
     "    file.write(\"\"\"\n",
     "// This function takes as input either (x,y,z) or (r,th,ph) and outputs\n",
     "//   all ADM quantities in the Cartesian or Spherical basis, respectively.\n",
-    "void ID_ADM_SphorCart(const REAL xyz_or_rthph[3], \n",
+    "void \"\"\"+ADM_input_function_name+\"\"\"(const REAL xyz_or_rthph[3], \n",
     "                     REAL *gammaDD00,REAL *gammaDD01,REAL *gammaDD02,REAL *gammaDD11,REAL *gammaDD12,REAL *gammaDD22,\n",
     "                     REAL *KDD00,REAL *KDD01,REAL *KDD02,REAL *KDD11,REAL *KDD12,REAL *KDD22,\n",
     "                     REAL *alpha,\n",
@@ -108,8 +112,8 @@
     "        [\"*gammaDD00\",\"*gammaDD01\",\"*gammaDD02\",\"*gammaDD11\",\"*gammaDD12\",\"*gammaDD22\",\n",
     "         \"*KDD00\",\"*KDD01\",\"*KDD02\",\"*KDD11\",\"*KDD12\",\"*KDD22\",\n",
     "         \"*alpha\",\"*betaU0\",\"*betaU1\",\"*betaU2\",\"*BU0\",\"*BU1\",\"*BU2\"],\n",
-    "        \"BSSN/ID_ADM_SphorCart.h\",params=outCparams)\n",
-    "with open(\"BSSN/ID_ADM_SphorCart.h\", \"a\") as file:\n",
+    "        \"BSSN/\"+ADM_input_function_name+\".h\",params=outCparams)\n",
+    "with open(\"BSSN/\"+ADM_input_function_name+\".h\", \"a\") as file:\n",
     "    file.write(\"}\\n\")"
    ]
   },
@@ -372,8 +376,12 @@
    ],
    "source": [
     "with open(\"BSSN/ID_ADM_xx0xx1xx2_to_BSSN_xx0xx1xx2__ALL_BUT_LAMBDAs.h\", \"w\") as file:\n",
+    "    file.write(\"void ID_ADM_xx0xx1xx2_to_BSSN_xx0xx1xx2__ALL_BUT_LAMBDAs(const REAL xx0xx1xx2[3],\")\n",
+    "    if pointer_to_ID_inputs == True:\n",
+    "        file.write(\"ID_inputs *other_inputs,\")\n",
+    "    else:\n",
+    "        file.write(\"ID_inputs other_inputs,\")\n",
     "    file.write(\"\"\"\n",
-    "void ID_ADM_xx0xx1xx2_to_BSSN_xx0xx1xx2__ALL_BUT_LAMBDAs(const REAL xx0xx1xx2[3],\n",
     "                    REAL *hDD00,REAL *hDD01,REAL *hDD02,REAL *hDD11,REAL *hDD12,REAL *hDD22,\n",
     "                    REAL *aDD00,REAL *aDD01,REAL *aDD02,REAL *aDD11,REAL *aDD12,REAL *aDD22,\n",
     "                    REAL *trK, \n",
@@ -394,7 +402,7 @@
     "outputC(r_th_ph_or_Cart_xyz_oID_xx[0:3],[\"xyz_or_rthph[0]\",\"xyz_or_rthph[1]\",\"xyz_or_rthph[2]\"],\n",
     "        \"BSSN/ID_ADM_xx0xx1xx2_to_BSSN_xx0xx1xx2__ALL_BUT_LAMBDAs.h\",outCparams+\",CSE_enable=False\")\n",
     "with open(\"BSSN/ID_ADM_xx0xx1xx2_to_BSSN_xx0xx1xx2__ALL_BUT_LAMBDAs.h\", \"a\") as file:\n",
-    "    file.write(\"\"\"ID_ADM_SphorCart(xyz_or_rthph, \n",
+    "    file.write(\"      \"+ADM_input_function_name+\"\"\"(xyz_or_rthph, other_inputs,\n",
     "                      &gammaSphorCartDD00,&gammaSphorCartDD01,&gammaSphorCartDD02,\n",
     "                      &gammaSphorCartDD11,&gammaSphorCartDD12,&gammaSphorCartDD22,\n",
     "                      &KSphorCartDD00,&KSphorCartDD01,&KSphorCartDD02,\n",
@@ -431,16 +439,21 @@
    "source": [
     "# Next write the driver function for ID_ADM_xx0xx1xx2_to_BSSN_xx0xx1xx2__ALL_BUT_LAMBDAs():\n",
     "with open(\"BSSN/ID_BSSN__ALL_BUT_LAMBDAs.h\", \"w\") as file:\n",
-    "    file.write(\"void ID_BSSN__ALL_BUT_LAMBDAs(const int Nxx_plus_2NGHOSTS[3],REAL *xx[3], REAL *in_gfs) {\\n\")\n",
-    "    file.write(lp.loop([\"i2\",\"i1\",\"i0\"],[\"0\",\"0\",\"0\"],\n",
-    "                       [\"Nxx_plus_2NGHOSTS[2]\",\"Nxx_plus_2NGHOSTS[1]\",\"Nxx_plus_2NGHOSTS[0]\"],\n",
-    "                       [\"1\",\"1\",\"1\"],[\"#pragma omp parallel for\",\n",
-    "                                      \"    const REAL xx2 = xx[2][i2];\",\n",
-    "                                      \"        const REAL xx1 = xx[1][i1];\"],\"\",\n",
-    "\"\"\"const REAL xx0 = xx[0][i0];\n",
+    "    file.write(\"void ID_BSSN__ALL_BUT_LAMBDAs(const int Nxx_plus_2NGHOSTS[3],REAL *xx[3],\")\n",
+    "    if pointer_to_ID_inputs == True:\n",
+    "        file.write(\"ID_inputs *other_inputs,\")\n",
+    "    else:\n",
+    "        file.write(\"ID_inputs other_inputs,\")\n",
+    "    file.write(\"REAL *in_gfs) {\\n\")\n",
+    "    file.write(lp.loop([\"i2\", \"i1\", \"i0\"], [\"0\", \"0\", \"0\"],\n",
+    "                       [\"Nxx_plus_2NGHOSTS[2]\", \"Nxx_plus_2NGHOSTS[1]\", \"Nxx_plus_2NGHOSTS[0]\"],\n",
+    "                       [\"1\", \"1\", \"1\"], [\"#pragma omp parallel for\",\n",
+    "                                         \"    const REAL xx2 = xx[2][i2];\",\n",
+    "                                         \"        const REAL xx1 = xx[1][i1];\"], \"\",\n",
+    "                       \"\"\"const REAL xx0 = xx[0][i0];\n",
     "const int idx = IDX3(i0,i1,i2);\n",
     "const REAL xx0xx1xx2[3] = {xx0,xx1,xx2};\n",
-    "ID_ADM_xx0xx1xx2_to_BSSN_xx0xx1xx2__ALL_BUT_LAMBDAs(xx0xx1xx2,\n",
+    "ID_ADM_xx0xx1xx2_to_BSSN_xx0xx1xx2__ALL_BUT_LAMBDAs(xx0xx1xx2,other_inputs,\n",
     "                    &in_gfs[IDX4pt(HDD00GF,idx)],&in_gfs[IDX4pt(HDD01GF,idx)],&in_gfs[IDX4pt(HDD02GF,idx)],\n",
     "                    &in_gfs[IDX4pt(HDD11GF,idx)],&in_gfs[IDX4pt(HDD12GF,idx)],&in_gfs[IDX4pt(HDD22GF,idx)],\n",
     "                    &in_gfs[IDX4pt(ADD00GF,idx)],&in_gfs[IDX4pt(ADD01GF,idx)],&in_gfs[IDX4pt(ADD02GF,idx)],\n",
@@ -474,41 +487,20 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::M_PI\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::RHOMAX\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::ZMIN\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::ZMAX\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# We will need all BSSN gridfunctions to be defined, as well as \n",
     "#     expressions for gammabarDD_dD in terms of exact derivatives of \n",
     "#     the rescaling matrix and finite-difference derivatives of\n",
-    "#     hDD's.\n",
+    "#     hDD's. This functionality is provided by BSSN.BSSN_unrescaled_and_barred_vars,\n",
+    "#     which we call here to overwrite above definitions of gammabarDD,gammabarUU, etc.\n",
+    "import BSSN.BSSN_unrescaled_and_barred_vars as Bubv\n",
+    "Bubv.BSSN_barred_variables()\n",
+    "gammabarDD    = Bubv.gammabarDD\n",
+    "gammabarUU    = Bubv.gammabarUU\n",
+    "gammabarDD_dD = Bubv.gammabarDD_dD\n",
+    "GammabarUDD   = Bubv.GammabarUDD\n",
     "\n",
-    "# First reset gammabarDD and then evaluate symbolic expressions for gammabarDET:\n",
-    "#gammabarDD = ixp.declarerank2(\"gammabarDD\",\"sym01\")\n",
-    "bssnrhs.BSSN_RHSs()\n",
-    "gammabarDD = bssnrhs.gammabarDD\n",
-    "gammabarUU, gammabarDET = ixp.symm_matrix_inverter3x3(gammabarDD)\n",
-    "\n",
-    "gammabarDD_dD = bssnrhs.gammabarDD_dD\n",
-    "\n",
-    "# Next compute Christoffel symbols \\bar{\\Gamma}^i_{jk}:\n",
-    "GammabarUDD = ixp.zerorank3()\n",
-    "for i in range(DIM):\n",
-    "    for j in range(DIM):\n",
-    "        for k in range(DIM):\n",
-    "            for l in range(DIM):\n",
-    "                GammabarUDD[i][j][k] += sp.Rational(1,2)*gammabarUU[i][l]*( gammabarDD_dD[l][j][k] +\n",
-    "                                                                            gammabarDD_dD[l][k][j] -\n",
-    "                                                                            gammabarDD_dD[j][k][l] )\n",
     "# Next evaluate \\bar{\\Lambda}^i, based on GammabarUDD above and GammahatUDD \n",
     "#       (from the reference metric):\n",
     "LambdabarU = ixp.zerorank1()\n",
@@ -568,11 +560,6 @@
      "text": [
       "Appended to file \"BSSN/ID_ADM_xx0xx1xx2_to_BSSN_xx0xx1xx2__ALL_BUT_LAMBDAs.h\"\n",
       "Appended to file \"BSSN/ID_ADM_xx0xx1xx2_to_BSSN_xx0xx1xx2__ALL_BUT_LAMBDAs.h\"\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::M_PI\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::RHOMAX\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::ZMIN\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::ZMAX\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter BSSN.BSSN_RHSs::eta\n",
       "\n",
       "\n",
       " ### BEGIN VALIDATION TESTS\n",
@@ -597,12 +584,12 @@
     "gri.glb_gridfcs_list = []\n",
     "\n",
     "import BSSN.ADM_Numerical_Spherical_or_Cartesian_to_BSSNCurvilinear as AtoBnum\n",
-    "AtoBnum.Convert_Spherical_or_Cartesian_ADM_to_BSSN_curvilinear(\"Spherical\",\"ID_ADM_SphorCart\")\n",
+    "AtoBnum.Convert_Spherical_or_Cartesian_ADM_to_BSSN_curvilinear(\"Spherical\",ADM_input_function_name)\n",
     "\n",
     "print(\"\\n\\n ### BEGIN VALIDATION TESTS\")\n",
     "import filecmp\n",
     "for file in [\"BSSN/ID_BSSN_lambdas.h\",\"BSSN/ID_BSSN__ALL_BUT_LAMBDAs.h\",\n",
-    "             \"BSSN/ID_ADM_xx0xx1xx2_to_BSSN_xx0xx1xx2__ALL_BUT_LAMBDAs.h\",\"BSSN/ID_ADM_SphorCart.h\"]:\n",
+    "             \"BSSN/ID_ADM_xx0xx1xx2_to_BSSN_xx0xx1xx2__ALL_BUT_LAMBDAs.h\",\"BSSN/\"+ADM_input_function_name+\".h\"]:\n",
     "    if filecmp.cmp(file,file+\"-ADM_Num_ID_validation\") == False:\n",
     "        print(\"VALIDATION TEST FAILED ON file: \"+file+\".\")\n",
     "        exit(1)\n",
