--- a/Tutorial-ADM_Initial_Data-TOV.ipynb
+++ b/Tutorial-ADM_Initial_Data-TOV.ipynb
@@ -89,8 +89,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1051, 1051, 1051, 1051, 1051)\n",
-      "Just generated a TOV star with R_Schw = 0.956568142523 , M = 0.14050303285288188 , M/R_Schw = 0.1468824086931645 .\n"
+      "1051 1051 1051 1051 1051\n",
+      "Just generated a TOV star with R_Schw = 0.9565681425227097 , M = 0.14050303285288188 , M/R_Schw = 0.1468824086931645 .\n"
      ]
     }
    ],
@@ -126,6 +126,7 @@
     "import numpy as np\n",
     "import scipy.integrate as si\n",
     "import math\n",
+    "import sys\n",
     "\n",
     "n = 1.\n",
     "rho_baryon_central = 0.129285\n",
@@ -227,8 +228,13 @@
     "        rhoArr_np.append(rho_baryonArr_np[i] + PArr_np[i]/(gamma - 1.))\n",
     "    \n",
     "    print(len(r_SchwArr_np),len(rhoArr_np),len(PArr_np),len(mArr_np),len(exp2phiArr_np))\n",
-    "    np.savetxt(\"outputTOVpolytrope.txt\", zip(r_SchwArr_np,rhoArr_np,PArr_np,mArr_np,exp2phiArr_np,confFactor_exp4phi_np,rbarArr_np), \n",
-    "               fmt=\"%.15e\")\n",
+    "    # Special thanks to Leonardo Werneck for pointing out this issue with zip()\n",
+    "    if sys.version_info[0] < 3:\n",
+    "        np.savetxt(\"outputTOVpolytrope.txt\", zip(r_SchwArr_np,rhoArr_np,PArr_np,mArr_np,exp2phiArr_np,confFactor_exp4phi_np,rbarArr_np), \n",
+    "                   fmt=\"%.15e\")\n",
+    "    else:\n",
+    "        np.savetxt(\"outputTOVpolytrope.txt\", list(zip(r_SchwArr_np,rhoArr_np,PArr_np,mArr_np,exp2phiArr_np,confFactor_exp4phi_np,rbarArr_np)), \n",
+    "                   fmt=\"%.15e\")\n",
     "\n",
     "    return R_Schw, M\n",
     "\n",
@@ -279,21 +285,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
