--- a/Tutorial-BSSN-Enforcing_Determinant_gammabar_equals_gammahat_Constraint.ipynb
+++ b/Tutorial-BSSN-Enforcing_Determinant_gammabar_equals_gammahat_Constraint.ipynb
@@ -31,20 +31,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::M_PI\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::M_PI\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::AMPL\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::SINHW\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Step 0: Import needed core NRPy+ modules\n",
     "from outputC import *\n",
@@ -54,6 +43,8 @@
     "import indexedexp as ixp\n",
     "import finite_difference as fin\n",
     "import reference_metric as rfm\n",
+    "import BSSN.BSSN_rescaled_vars as Brv\n",
+    "import BSSN.BSSN_unrescaled_and_barred_vars as Bubv\n",
     "\n",
     "# Set spatial dimension (must be 3 for BSSN)\n",
     "DIM = 3\n",
@@ -65,8 +56,10 @@
     "\n",
     "# We will need the h_{ij} quantities defined within BSSN_RHSs \n",
     "#    below when we enforce the gammahat=gammabar constraint\n",
-    "import BSSN.BSSN_RHSs as rhs\n",
-    "rhs.BSSN_RHSs()\n",
+    "# Step 1: All barred quantities are defined in terms of BSSN rescaled gridfunctions,\n",
+    "#         which we declare here in case they haven't yet been declared elsewhere.\n",
+    "hDD,cf,aDD,trK,lambdaU,alpha,vetU,betU = Brv.declare_BSSN_rescaled_gridfunctions_if_not_declared_already()\n",
+    "gammabarDD, gammabarUU, gammabarDD_dD, gammabarDD_dupD, GammabarUDD, AbarDD, AbarUU = Bubv.BSSN_barred_variables()\n",
     "\n",
     "# First define the Kronecker delta:\n",
     "KroneckerDeltaDD = ixp.zerorank2()\n",
@@ -75,14 +68,14 @@
     "\n",
     "# The detgammabar in BSSN_RHSs is set to detgammahat when BSSN_RHSs::detgbarOverdetghat_equals_one=True (default),\n",
     "#    so we manually compute it here:\n",
-    "dummygammabarUU, detgammabar = ixp.symm_matrix_inverter3x3(rhs.gammabarDD)\n",
+    "dummygammabarUU, detgammabar = ixp.symm_matrix_inverter3x3(gammabarDD)\n",
     "\n",
     "# Next apply the constraint enforcement equation above.\n",
     "hprimeDD = ixp.zerorank2()\n",
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
     "        hprimeDD[i][j] = \\\n",
-    "        (sp.Abs(rfm.detgammahat)/detgammabar)**(sp.Rational(1,3)) * (KroneckerDeltaDD[i][j] + rhs.hDD[i][j]) \\\n",
+    "        (sp.Abs(rfm.detgammahat)/detgammabar)**(sp.Rational(1,3)) * (KroneckerDeltaDD[i][j] + hDD[i][j]) \\\n",
     "        - KroneckerDeltaDD[i][j]\n",
     "\n",
     "enforce_detg_constraint_vars = [ \\\n",
@@ -105,7 +98,8 @@
     "                                      \"    const REAL xx2 = xx[2][i2];\",\n",
     "                                      \"        const REAL xx1 = xx[1][i1];\"],\"\",\n",
     "                                     \"const REAL xx0 = xx[0][i0];\\n\"+enforce_gammadet_string))\n",
-    "    file.write(\"}\\n\")"
+    "    file.write(\"}\\n\")\n",
+    "print(\"Successfully output implementation of det(gammabar) constraint to file BSSN/enforce_detgammabar_constraint.h\")"
    ]
   },
   {
@@ -117,10 +111,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation test PASSED on file: BSSN/enforce_detgammabar_constraint.h\n"
+     ]
+    }
+   ],
+   "source": [
+    "!mv BSSN/enforce_detgammabar_constraint.h BSSN/enforce_detgammabar_constraint.h-validation\n",
+    "\n",
+    "import BSSN.Enforce_Detgammabar_Constraint as EGC\n",
+    "EGC.output_Enforce_Detgammabar_Constraint_Ccode()\n",
+    "\n",
+    "import filecmp\n",
+    "for file in [\"BSSN/enforce_detgammabar_constraint.h\"]:\n",
+    "    if filecmp.cmp(file,file+\"-validation\") == False:\n",
+    "        print(\"VALIDATION TEST FAILED ON file: \"+file+\".\")\n",
+    "        exit(1)\n",
+    "    else:\n",
+    "        print(\"Validation test PASSED on file: \"+file)"
+   ]
   }
  ],
  "metadata": {
