--- a/Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_TOV_initial_data.ipynb
+++ b/Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_TOV_initial_data.ipynb
@@ -47,8 +47,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::M_PI\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::RMAX\n",
       "Wrote to file \"BSSN/xxCart.h\"\n"
      ]
     }
@@ -73,11 +71,8 @@
     "par.set_parval_from_str(\"reference_metric::CoordSystem\",\"Spherical\")\n",
     "rfm.reference_metric() # Create ReU, ReDD needed for rescaling B-L initial data, generating BSSN RHSs, etc.\n",
     "\n",
-    "# We will need the h_{ij} quantities defined within BSSN_RHSs \n",
-    "#    below when we enforce the gammahat=gammabar constraint\n",
-    "import BSSN.BSSN_RHSs as rhs\n",
-    "par.set_parval_from_str(\"BSSN.BSSN_RHSs::ConformalFactor\",\"phi\")\n",
-    "rhs.BSSN_RHSs()\n",
+    "import BSSN.BSSN_unrescaled_and_barred_vars as Bubv\n",
+    "par.set_parval_from_str(\"BSSN.BSSN_unrescaled_and_barred_vars::ConformalFactor\",\"phi\")\n",
     "\n",
     "#################\n",
     "# Next output C headers related to the numerical grids we just set up:\n",
@@ -118,9 +113,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[33mDEPRECATION: Python 2.7 will reach the end of its life on January 1st, 2020. Please upgrade your Python as Python 2.7 won't be maintained after that date. A future version of pip will drop support for Python 2.7.\u001b[0m\n",
-      "\u001b[33mYou are using pip version 19.0.1, however version 19.0.2 is available.\n",
-      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n"
+      "\u001b[33mYou are using pip version 18.1, however version 19.0.3 is available.\r\n",
+      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\r\n"
      ]
     }
    ],
@@ -651,33 +645,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Declare source terms as gridfunctions"
+    "## Convert ADM spacetime quantity initial data from Spherical to BSSN Curvilinear coordinates [as documented in the corresponding tutorial module](Tutorial-ADM_Initial_Data-Converting_Numerical_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear.ipynb)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rho = gri.register_gridfunctions(\"AUX\",\"rho\")\n",
-    "S = gri.register_gridfunctions(\"AUX\",\"S\")\n",
-    "sD = ixp.register_gridfunctions_for_single_rank1(\"AUX\",\"sD\")\n",
-    "sDD = ixp.register_gridfunctions_for_single_rank2(\"AUX\",\"sDD\",\"sym01\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Convert ADM spacetime quantity initial data from Spherical to BSSN Curvilinear coordinates\n",
-    "\n",
-    "This is an automated process, taken care of by [BSSN.ADM_Numerical_Spherical_or_Cartesian_to_BSSNCurvilinear](../edit/BSSN.ADM_Numerical_Spherical_or_Cartesian_to_BSSNCurvilinear.py), and documented [in this tutorial module](Tutorial-ADM_Initial_Data-Converting_Numerical_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear.ipynb)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -698,11 +671,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Apply singular, curvilinear coordinate boundary conditions [as documented in the NRPy+ tutorial module](Tutorial-Start_to_Finish-Curvilinear_BCs.ipynb)\n",
+    "## We will validate that the TOV initial data satisfy the Hamiltonian constraint, modulo numerical finite differencing error\n",
     "\n",
-    "After setting the gridfunctions to their initial values, we must next apply boundary conditions, as initial data are sometimes ill-defined in ghost zones. E.g., spherical initial data might not be properly defined at points where r=-1.\n",
-    "\n",
-    "Admittedly this is not as much a concern with initial data originally defined in a Cartesian basis. Applying these boundary conditions should affect the initial data at the outer boundary, and will in general cause the $\\det{\\bar{\\gamma}_{ij}}=\\det{\\hat{\\gamma}_{ij}}$ constraint to be violated there. Thus after we apply these boundary conditions, we must always call the routine for enforcing the $\\det{\\bar{\\gamma}_{ij}}=\\det{\\hat{\\gamma}_{ij}}$ constraint."
+    "### First output the Hamiltonian constraint [as documented in the corresponding NRPy+ tutorial module](Tutorial-BSSNConstraints.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generating optimized C code for Hamiltonian constraint. May take a while, depending on CoordSystem.\n",
+      "Finished in 15.6071419716 seconds.\n",
+      "Output C implementation of Hamiltonian constraint to BSSN/Hamiltonian.h\n"
+     ]
+    }
+   ],
+   "source": [
+    "import BSSN.BSSNConstraints as bssncon\n",
+    "bssncon.output_C__Hamiltonian_h(add_T4UUmunu_source_terms=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Next apply singular, curvilinear coordinate boundary conditions [as documented in the corresponding NRPy+ tutorial module](Tutorial-Start_to_Finish-Curvilinear_BCs.ipynb)"
    ]
   },
   {
@@ -716,8 +714,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Wrote to file \"CurviBoundaryConditions/gridfunction_defines.h\"\n",
       "Wrote to file \"CurviBoundaryConditions/set_parity_conditions.h\"\n",
       "Wrote to file \"CurviBoundaryConditions/xxCart.h\"\n",
+      "Wrote to file \"CurviBoundaryConditions/xxminmax.h\"\n",
       "Wrote to file \"CurviBoundaryConditions/Cart_to_xx.h\"\n"
      ]
     }
@@ -731,129 +731,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Enforce conformal 3-metric $\\det{\\bar{\\gamma}_{ij}}=\\det{\\hat{\\gamma}_{ij}}$ constraint (Eq. 53 of [Ruchlin, Etienne, and Baumgarte (2018)](https://arxiv.org/abs/1712.07658))\n",
+    "### Then enforce conformal 3-metric $\\det{\\bar{\\gamma}_{ij}}=\\det{\\hat{\\gamma}_{ij}}$ constraint (Eq. 53 of [Ruchlin, Etienne, and Baumgarte (2018)](https://arxiv.org/abs/1712.07658)), as [documented in the corresponding NRPy+ tutorial module](Tutorial-BSSN-Enforcing_Determinant_gammabar_equals_gammahat_Constraint.ipynb)\n",
     "\n",
-    "As mentioned in the [BSSN curvilinear tutorial module](Tutorial-BSSNCurvilinear.ipynb), the adopted formulation of Einstein's equations requires that $\\partial_t \\bar{\\gamma} = 0$, where $\\bar{\\gamma}=\\det \\bar{\\gamma}_{ij}$. Further, all initial data we choose satisfies $\\bar{\\gamma}=\\hat{\\gamma}$. \n",
-    "\n",
-    "However, numerical errors will cause $\\bar{\\gamma}$ to deviate from a constant in time. This actually disrupts the hyperbolicity of the PDEs, so to cure this, we adjust $\\bar{\\gamma}_{ij}$ at the end of each Runge-Kutta timestep, so that its determinant satisfies $\\bar{\\gamma}=\\hat{\\gamma}$ at all times. We adopt the following, rather standard prescription (Eq. 53 of [Ruchlin, Etienne, and Baumgarte (2018)](https://arxiv.org/abs/1712.07658)):\n",
-    "\n",
-    "$$\n",
-    "\\bar{\\gamma}_{ij} \\to \\left(\\frac{\\hat{\\gamma}}{\\bar{\\gamma}}\\right)^{1/3} \\bar{\\gamma}_{ij}.\n",
-    "$$\n",
-    "Notice the expression on the right is guaranteed to have determinant equal to $\\hat{\\gamma}$.\n",
-    "\n",
-    "Unfortunately $\\bar{\\gamma}_{ij}$ is not an evolved variable, so we must rewrite the above in terms of $h_{ij}$:\n",
-    "\\begin{align}\n",
-    "\\left(\\frac{\\hat{\\gamma}}{\\bar{\\gamma}}\\right)^{1/3} \\bar{\\gamma}_{ij} &= \\bar{\\gamma}'_{ij}  \\\\\n",
-    "&= \\hat{\\gamma}_{ij} + \\varepsilon'_{ij} \\\\\n",
-    "&= \\hat{\\gamma}_{ij} + \\text{Re[i][j]} h'_{ij} \\\\\n",
-    "\\implies h'_{ij} &= \\left[\\left(\\frac{\\hat{\\gamma}}{\\bar{\\gamma}}\\right)^{1/3} \\bar{\\gamma}_{ij} - \\hat{\\gamma}_{ij}\\right] / \\text{Re[i][j]} \\\\\n",
-    "&= \\left(\\frac{\\hat{\\gamma}}{\\bar{\\gamma}}\\right)^{1/3} \\frac{\\bar{\\gamma}_{ij}}{\\text{Re[i][j]}} - \\delta_{ij}\\\\\n",
-    "&= \\left(\\frac{\\hat{\\gamma}}{\\bar{\\gamma}}\\right)^{1/3} \\frac{\\hat{\\gamma}_{ij} + \\text{Re[i][j]} h_{ij}}{\\text{Re[i][j]}} - \\delta_{ij}\\\\\n",
-    "&= \\left(\\frac{\\hat{\\gamma}}{\\bar{\\gamma}}\\right)^{1/3} \\left(\\delta_{ij} + h_{ij}\\right) - \\delta_{ij}\n",
-    "\\end{align}\n",
-    "\n",
-    "Upon inspection, when expressing $\\hat{\\gamma}$ SymPy generates expressions like $\\text{(xx0)}^{4/3}=\\text{pow(xx0, 4./3.)}$, which can yield $\\text{NaN}$s when $\\text{xx0}<0$ (i.e., in the $\\text{xx0}$ ghost zones). To prevent this, we know that $\\hat{\\gamma}\\ge 0$ for all reasonable coordinate systems, so we make the replacement $\\hat{\\gamma}\\to |\\hat{\\gamma}|$ below:"
+    "Applying curvilinear boundary conditions should affect the initial data at the outer boundary, and will in general cause the $\\det{\\bar{\\gamma}_{ij}}=\\det{\\hat{\\gamma}_{ij}}$ constraint to be violated there. Thus after we apply these boundary conditions, we must always call the routine for enforcing the $\\det{\\bar{\\gamma}_{ij}}=\\det{\\hat{\\gamma}_{ij}}$ constraint:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# First define the Kronecker delta:\n",
-    "KroneckerDeltaDD = ixp.zerorank2()\n",
-    "for i in range(DIM):\n",
-    "    KroneckerDeltaDD[i][i] = sp.sympify(1)\n",
-    "\n",
-    "# The detgammabar in BSSN_RHSs is set to detgammahat when BSSN_RHSs::detgbarOverdetghat_equals_one=True (default),\n",
-    "#    so we manually compute it here:\n",
-    "dummygammabarUU, detgammabar = ixp.symm_matrix_inverter3x3(rhs.gammabarDD)\n",
-    "\n",
-    "# Next apply the constraint enforcement equation above.\n",
-    "hprimeDD = ixp.zerorank2()\n",
-    "for i in range(DIM):\n",
-    "    for j in range(DIM):\n",
-    "        hprimeDD[i][j] = \\\n",
-    "        (sp.Abs(rfm.detgammahat)/detgammabar)**(sp.Rational(1,3)) * (KroneckerDeltaDD[i][j] + rhs.hDD[i][j]) \\\n",
-    "        - KroneckerDeltaDD[i][j]\n",
-    "\n",
-    "enforce_detg_constraint_vars = [ \\\n",
-    "                                lhrh(lhs=gri.gfaccess(\"in_gfs\",\"hDD00\"),rhs=hprimeDD[0][0]),\n",
-    "                                lhrh(lhs=gri.gfaccess(\"in_gfs\",\"hDD01\"),rhs=hprimeDD[0][1]),\n",
-    "                                lhrh(lhs=gri.gfaccess(\"in_gfs\",\"hDD02\"),rhs=hprimeDD[0][2]),\n",
-    "                                lhrh(lhs=gri.gfaccess(\"in_gfs\",\"hDD11\"),rhs=hprimeDD[1][1]),\n",
-    "                                lhrh(lhs=gri.gfaccess(\"in_gfs\",\"hDD12\"),rhs=hprimeDD[1][2]),\n",
-    "                                lhrh(lhs=gri.gfaccess(\"in_gfs\",\"hDD22\"),rhs=hprimeDD[2][2]) ]\n",
-    "\n",
-    "enforce_gammadet_string = fin.FD_outputC(\"returnstring\",enforce_detg_constraint_vars,\n",
-    "                                         params=\"outCverbose=False,preindent=0,includebraces=False\")\n",
-    "\n",
-    "with open(\"BSSN/enforce_detgammabar_constraint.h\", \"w\") as file:\n",
-    "    indent = \"   \"\n",
-    "    file.write(\"void enforce_detgammabar_constraint(const int Nxx_plus_2NGHOSTS[3],REAL *xx[3], REAL *in_gfs) {\\n\\n\")\n",
-    "    file.write(lp.loop([\"i2\",\"i1\",\"i0\"],[\"0\",\"0\",\"0\"],\n",
-    "                       [\"Nxx_plus_2NGHOSTS[2]\",\"Nxx_plus_2NGHOSTS[1]\",\"Nxx_plus_2NGHOSTS[0]\"],\n",
-    "                       [\"1\",\"1\",\"1\"],[\"#pragma omp parallel for\",\n",
-    "                                      \"    const REAL xx2 = xx[2][i2];\",\n",
-    "                                      \"        const REAL xx1 = xx[1][i1];\"],\"\",\n",
-    "                                     \"const REAL xx0 = xx[0][i0];\\n\"+enforce_gammadet_string))\n",
-    "    file.write(\"}\\n\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Validate that the UIUC black hole initial data satisfy the Hamiltonian constraint, modulo numerical finite differencing error\n",
-    "\n",
-    "### First output the Hamiltonian constraint:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting to generate the C code for the Hamiltonian constraint...\n",
-      "Finished in 12.5934598446 seconds.\n"
+      "Output C implementation of det(gammabar) constraint to file BSSN/enforce_detgammabar_constraint.h\n"
      ]
     }
    ],
    "source": [
-    "from outputC import *\n",
-    "import grid as gri\n",
-    "import BSSN.BSSNConstraints as bssncon\n",
-    "bssncon.BSSNConstraints()\n",
-    "\n",
-    "## ADD MATTER SOURCE TERM\n",
-    "M_PI = par.Cparameters(\"REAL\",thismodule,\"M_PI\") # M_PI is pi as defined in C \n",
-    "bssncon.H += -16*M_PI*rho\n",
-    "\n",
-    "print(\"Starting to generate the C code for the Hamiltonian constraint...\")\n",
-    "import time\n",
-    "start = time.time()\n",
-    "Hamiltonianstring = fin.FD_outputC(\"returnstring\",lhrh(lhs=gri.gfaccess(\"aux_gfs\",\"H\"),rhs=bssncon.H), \n",
-    "                                   params=\"outCverbose=False\")\n",
-    "end = time.time()\n",
-    "print(\"Finished in \"+str(end-start)+\" seconds.\")\n",
-    "\n",
-    "import loop as lp\n",
-    "with open(\"BSSN/Hamiltonian.h\", \"w\") as file:\n",
-    "    file.write(lp.loop([\"i2\",\"i1\",\"i0\"],[\"NGHOSTS\",\"NGHOSTS\",\"NGHOSTS\"],\n",
-    "                       [\"NGHOSTS+Nxx[2]\",\"NGHOSTS+Nxx[1]\",\"NGHOSTS+Nxx[0]\"],\n",
-    "                       [\"1\",\"1\",\"1\"],[\"const REAL invdx0 = 1.0/dxx[0];\\n\"+\n",
-    "                                      \"const REAL invdx1 = 1.0/dxx[1];\\n\"+\n",
-    "                                      \"const REAL invdx2 = 1.0/dxx[2];\\n\"+\n",
-    "                                      \"#pragma omp parallel for\",\n",
-    "                                      \"    const REAL xx2 = xx[2][i2];\",\n",
-    "                                      \"        const REAL xx1 = xx[1][i1];\"],\"\",\n",
-    "                                     \"const REAL xx0 = xx[0][i0];\\n\"+Hamiltonianstring))"
+    "import BSSN.Enforce_Detgammabar_Constraint as EGC\n",
+    "EGC.output_Enforce_Detgammabar_Constraint_Ccode()"
    ]
   },
   {
@@ -865,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -878,14 +776,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing BSSN/TOV_Playground.c\n"
+      "Overwriting BSSN/TOV_Playground.c\n"
      ]
     }
    ],
@@ -1181,12 +1079,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "!cd BSSN/\n",
-    "!rm -f TOV_Playground\n",
+    "!rm -f TOV_Playground out96.txt\n",
     "#!gcc -Ofast -march=native -ftree-parallelize-loops=2 -fopenmp BSSN/TOV_Playground.c -o TOV_Playground -lm\n",
     "#!taskset -c 0,1 ./TOV_Playground 96 96 96 > out96.txt\n",
     "#!gcc -fopenmp -O BSSN/TOV_Playground.c -o TOV_Playground -lm\n",
@@ -1205,7 +1102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1215,7 +1112,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1280,7 +1177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1320,7 +1217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {
     "scrolled": false
    },
@@ -1348,6 +1245,7 @@
     }
    ],
    "source": [
+    "!rm -f out48.txt\n",
     "!taskset -c 0 ./TOV_Playground 48 48 48 > out48.txt\n",
     "\n",
     "x48,y48,valuesCF48,valuesHam48 = np.loadtxt('out48.txt').T #Transposed for easier unpacking\n",
@@ -1392,7 +1290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {
     "scrolled": true
    },
@@ -1402,7 +1300,11 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_TOV_initial_data.ipynb to latex\n",
-      "[NbConvertApp] Writing 116956 bytes to Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_TOV_initial_data.tex\n",
+      "[NbConvertApp] Support files will be in Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_TOV_initial_data_files/\n",
+      "[NbConvertApp] Making directory Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_TOV_initial_data_files\n",
+      "[NbConvertApp] Making directory Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_TOV_initial_data_files\n",
+      "[NbConvertApp] Making directory Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_TOV_initial_data_files\n",
+      "[NbConvertApp] Writing 105545 bytes to Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_TOV_initial_data.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
