--- a/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide.ipynb
+++ b/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide.ipynb
@@ -136,11 +136,12 @@
       "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::M_PI\n",
       "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::RMAX\n",
       "Generating C code for BSSN RHSs in Spherical coordinates.\n",
-      "Finished in 53.2452790737 seconds.\n"
+      "Finished in 44.0682008266 seconds.\n"
      ]
     }
    ],
    "source": [
+    "import BSSN.BSSN_unrescaled_and_barred_vars as Bubv\n",
     "import BSSN.BSSN_RHSs as rhs\n",
     "# Set the *covariant*, second-order Gamma-driving shift condition\n",
     "par.set_parval_from_str(\"BSSN.BSSN_RHSs::ShiftEvolutionOption\", \"GammaDriving2ndOrder_Covariant\")\n",
@@ -176,7 +177,9 @@
     "                  lhrh(lhs=gri.gfaccess(\"rhs_gfs\",\"vetU1\"),rhs=rhs.vet_rhsU[1]),\n",
     "                  lhrh(lhs=gri.gfaccess(\"rhs_gfs\",\"vetU2\"),rhs=rhs.vet_rhsU[2]) ]\n",
     "\n",
-    "BSSN_RHSs_string = fin.FD_outputC(\"returnstring\",BSSN_evol_rhss, params=\"outCverbose=False\",upwindcontrolvec=rhs.betaU)\n",
+    "Bubv.betaUbar_and_derivs()\n",
+    "betaU = Bubv.betaU\n",
+    "BSSN_RHSs_string = fin.FD_outputC(\"returnstring\",BSSN_evol_rhss, params=\"outCverbose=False\",upwindcontrolvec=betaU)\n",
     "end = time.time()\n",
     "print(\"Finished in \"+str(end-start)+\" seconds.\")\n",
     "\n",
@@ -196,7 +199,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 3B: Output the Hamiltonian constraint"
+    "## Step 3B: We will validate that the Brill-Lindquist black hole simulation satisfies the Hamiltonian constraint, modulo numerical finite differencing error"
    ]
   },
   {
@@ -208,41 +211,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generating C code for Hamiltonian constraint\n",
-      "Finished in 13.1152369976 seconds.\n"
+      "Generating optimized C code for Hamiltonian constraint. May take a while, depending on CoordSystem.\n",
+      "Finished in 11.3113508224 seconds.\n",
+      "Output C implementation of Hamiltonian constraint to BSSN/Hamiltonian.h\n"
      ]
     }
    ],
    "source": [
-    "import BSSN.BSSNConstraints as bssncon\n",
-    "bssncon.BSSNConstraints()\n",
-    "\n",
+    "# First register the Hamiltonian as a gridfunction.\n",
     "H = gri.register_gridfunctions(\"AUX\",\"H\")\n",
-    "\n",
-    "print(\"Generating C code for Hamiltonian constraint\")\n",
-    "start = time.time()\n",
-    "Hamiltonianstring = fin.FD_outputC(\"returnstring\",lhrh(lhs=gri.gfaccess(\"aux_gfs\",\"H\"),rhs=bssncon.H), \n",
-    "                                   params=\"outCverbose=False\")\n",
-    "end = time.time()\n",
-    "print(\"Finished in \"+str(end-start)+\" seconds.\")\n",
-    "\n",
-    "with open(\"BSSN/Hamiltonian.h\", \"w\") as file:\n",
-    "    file.write(lp.loop([\"i2\",\"i1\",\"i0\"],[\"NGHOSTS\",\"NGHOSTS\",\"NGHOSTS\"],\n",
-    "                       [\"NGHOSTS+Nxx[2]\",\"NGHOSTS+Nxx[1]\",\"NGHOSTS+Nxx[0]\"],\n",
-    "                       [\"1\",\"1\",\"1\"],[\"const REAL invdx0 = 1.0/dxx[0];\\n\"+\n",
-    "                                      \"const REAL invdx1 = 1.0/dxx[1];\\n\"+\n",
-    "                                      \"const REAL invdx2 = 1.0/dxx[2];\\n\"+\n",
-    "                                      \"#pragma omp parallel for\",\n",
-    "                                      \"    const REAL xx2 = xx[2][i2];\",\n",
-    "                                      \"        const REAL xx1 = xx[1][i1];\"],\"\",\n",
-    "                                     \"const REAL xx0 = xx[0][i0];\\n\"+Hamiltonianstring))"
+    "# Then define the Hamiltonian constraint and output the optimized C code.\n",
+    "import BSSN.BSSNConstraints as bssncon\n",
+    "bssncon.output_C__Hamiltonian_h(add_T4UUmunu_source_terms=False)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 4: Apply singular, curvilinear coordinate boundary conditions [as documented in the NRPy+ tutorial module](Tutorial-Start_to_Finish-Curvilinear_BCs.ipynb)"
+    "## Step 4: Apply singular, curvilinear coordinate boundary conditions [as documented in the corresponding NRPy+ tutorial module](Tutorial-Start_to_Finish-Curvilinear_BCs.ipynb)"
    ]
   },
   {
@@ -254,8 +241,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Wrote to file \"CurviBoundaryConditions/gridfunction_defines.h\"\n",
       "Wrote to file \"CurviBoundaryConditions/set_parity_conditions.h\"\n",
       "Wrote to file \"CurviBoundaryConditions/xxCart.h\"\n",
+      "Wrote to file \"CurviBoundaryConditions/xxminmax.h\"\n",
       "Wrote to file \"CurviBoundaryConditions/Cart_to_xx.h\"\n"
      ]
     }
@@ -269,75 +258,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 5: Enforce conformal 3-metric $\\det{\\bar{\\gamma}_{ij}}=\\det{\\hat{\\gamma}_{ij}}$ constraint (Eq. 53 of [Ruchlin, Etienne, and Baumgarte (2018)](https://arxiv.org/abs/1712.07658))\n",
+    "## Step 5: Enforce conformal 3-metric $\\det{\\bar{\\gamma}_{ij}}=\\det{\\hat{\\gamma}_{ij}}$ constraint (Eq. 53 of [Ruchlin, Etienne, and Baumgarte (2018)](https://arxiv.org/abs/1712.07658)), as [documented in the corresponding NRPy+ tutorial module](Tutorial-BSSN-Enforcing_Determinant_gammabar_equals_gammahat_Constraint.ipynb)\n",
     "\n",
-    "As mentioned in the [BSSN curvilinear tutorial module](Tutorial-BSSNCurvilinear.ipynb), the adopted formulation of Einstein's equations requires that $\\partial_t \\bar{\\gamma} = 0$, where $\\bar{\\gamma}=\\det \\bar{\\gamma}_{ij}$. Further, all initial data we choose satisfies $\\bar{\\gamma}=\\hat{\\gamma}$. \n",
-    "\n",
-    "However, numerical errors will cause $\\bar{\\gamma}$ to deviate from a constant in time. This actually disrupts the hyperbolicity of the PDEs, so to cure this, we adjust $\\bar{\\gamma}_{ij}$ at the end of each Runge-Kutta timestep, so that its determinant satisfies $\\bar{\\gamma}=\\hat{\\gamma}$ at all times. We adopt the following, rather standard prescription (Eq. 53 of [Ruchlin, Etienne, and Baumgarte (2018)](https://arxiv.org/abs/1712.07658)):\n",
-    "\n",
-    "$$\n",
-    "\\bar{\\gamma}_{ij} \\to \\left(\\frac{\\hat{\\gamma}}{\\bar{\\gamma}}\\right)^{1/3} \\bar{\\gamma}_{ij}.\n",
-    "$$\n",
-    "Notice the expression on the right is guaranteed to have determinant equal to $\\hat{\\gamma}$.\n",
-    "\n",
-    "Unfortunately $\\bar{\\gamma}_{ij}$ is not an evolved variable, so we must rewrite the above in terms of $h_{ij}$:\n",
-    "\\begin{align}\n",
-    "\\left(\\frac{\\hat{\\gamma}}{\\bar{\\gamma}}\\right)^{1/3} \\bar{\\gamma}_{ij} &= \\bar{\\gamma}'_{ij}  \\\\\n",
-    "&= \\hat{\\gamma}_{ij} + \\varepsilon'_{ij} \\\\\n",
-    "&= \\hat{\\gamma}_{ij} + \\text{Re[i][j]} h'_{ij} \\\\\n",
-    "\\implies h'_{ij} &= \\left[\\left(\\frac{\\hat{\\gamma}}{\\bar{\\gamma}}\\right)^{1/3} \\bar{\\gamma}_{ij} - \\hat{\\gamma}_{ij}\\right] / \\text{Re[i][j]} \\\\\n",
-    "&= \\left(\\frac{\\hat{\\gamma}}{\\bar{\\gamma}}\\right)^{1/3} \\frac{\\bar{\\gamma}_{ij}}{\\text{Re[i][j]}} - \\delta_{ij}\\\\\n",
-    "&= \\left(\\frac{\\hat{\\gamma}}{\\bar{\\gamma}}\\right)^{1/3} \\frac{\\hat{\\gamma}_{ij} + \\text{Re[i][j]} h_{ij}}{\\text{Re[i][j]}} - \\delta_{ij}\\\\\n",
-    "&= \\left(\\frac{\\hat{\\gamma}}{\\bar{\\gamma}}\\right)^{1/3} \\left(\\delta_{ij} + h_{ij}\\right) - \\delta_{ij}\n",
-    "\\end{align}\n",
-    "\n",
-    "Upon inspection, when expressing $\\hat{\\gamma}$ SymPy generates expressions like $\\text{(xx0)}^{4/3}=\\text{pow(xx0, 4./3.)}$, which can yield $\\text{NaN}$s when $\\text{xx0}<0$ (i.e., in the $\\text{xx0}$ ghost zones). To prevent this, we know that $\\hat{\\gamma}\\ge 0$ for all reasonable coordinate systems, so we make the replacement $\\hat{\\gamma}\\to |\\hat{\\gamma}|$ below:"
+    "Applying curvilinear boundary conditions should affect the initial data at the outer boundary, and will in general cause the $\\det{\\bar{\\gamma}_{ij}}=\\det{\\hat{\\gamma}_{ij}}$ constraint to be violated there. Thus after we apply these boundary conditions, we must always call the routine for enforcing the $\\det{\\bar{\\gamma}_{ij}}=\\det{\\hat{\\gamma}_{ij}}$ constraint:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Output C implementation of det(gammabar) constraint to file BSSN/enforce_detgammabar_constraint.h\n"
+     ]
+    }
+   ],
    "source": [
-    "# First define the Kronecker delta:\n",
-    "KroneckerDeltaDD = ixp.zerorank2()\n",
-    "for i in range(DIM):\n",
-    "    KroneckerDeltaDD[i][i] = sp.sympify(1)\n",
-    "\n",
-    "# The detgammabar in BSSN_RHSs is set to detgammahat when BSSN_RHSs::detgbarOverdetghat_equals_one=True (default),\n",
-    "#    so we manually compute it here:\n",
-    "dummygammabarUU, detgammabar = ixp.symm_matrix_inverter3x3(rhs.gammabarDD)\n",
-    "\n",
-    "# Next apply the constraint enforcement equation above.\n",
-    "hprimeDD = ixp.zerorank2()\n",
-    "for i in range(DIM):\n",
-    "    for j in range(DIM):\n",
-    "        hprimeDD[i][j] = \\\n",
-    "        (sp.Abs(rfm.detgammahat)/detgammabar)**(sp.Rational(1,3)) * (KroneckerDeltaDD[i][j] + rhs.hDD[i][j]) \\\n",
-    "        - KroneckerDeltaDD[i][j]\n",
-    "\n",
-    "enforce_detg_constraint_vars = [ \\\n",
-    "                                lhrh(lhs=gri.gfaccess(\"in_gfs\",\"hDD00\"),rhs=hprimeDD[0][0]),\n",
-    "                                lhrh(lhs=gri.gfaccess(\"in_gfs\",\"hDD01\"),rhs=hprimeDD[0][1]),\n",
-    "                                lhrh(lhs=gri.gfaccess(\"in_gfs\",\"hDD02\"),rhs=hprimeDD[0][2]),\n",
-    "                                lhrh(lhs=gri.gfaccess(\"in_gfs\",\"hDD11\"),rhs=hprimeDD[1][1]),\n",
-    "                                lhrh(lhs=gri.gfaccess(\"in_gfs\",\"hDD12\"),rhs=hprimeDD[1][2]),\n",
-    "                                lhrh(lhs=gri.gfaccess(\"in_gfs\",\"hDD22\"),rhs=hprimeDD[2][2]) ]\n",
-    "\n",
-    "enforce_gammadet_string = fin.FD_outputC(\"returnstring\",enforce_detg_constraint_vars,\n",
-    "                                         params=\"outCverbose=False,preindent=0,includebraces=False\")\n",
-    "\n",
-    "with open(\"BSSN/enforce_detgammabar_constraint.h\", \"w\") as file:\n",
-    "    indent = \"   \"\n",
-    "    file.write(\"void enforce_detgammabar_constraint(const int Nxx_plus_2NGHOSTS[3],REAL *xx[3], REAL *in_gfs) {\\n\\n\")\n",
-    "    file.write(lp.loop([\"i2\",\"i1\",\"i0\"],[\"0\",\"0\",\"0\"],\n",
-    "                       [\"Nxx_plus_2NGHOSTS[2]\",\"Nxx_plus_2NGHOSTS[1]\",\"Nxx_plus_2NGHOSTS[0]\"],\n",
-    "                       [\"1\",\"1\",\"1\"],[\"#pragma omp parallel for\",\n",
-    "                                      \"    const REAL xx2 = xx[2][i2];\",\n",
-    "                                      \"        const REAL xx1 = xx[1][i1];\"],\"\",\n",
-    "                                     \"const REAL xx0 = xx[0][i0];\\n\"+enforce_gammadet_string))\n",
-    "    file.write(\"}\\n\")"
+    "import BSSN.Enforce_Detgammabar_Constraint as EGC\n",
+    "EGC.output_Enforce_Detgammabar_Constraint_Ccode()"
    ]
   },
   {
@@ -362,14 +303,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting BSSN/BSSNCurvilinear_Playground.c\n"
+      "Overwriting BSSN/BrillLindquist_Playground.c\n"
      ]
     }
    ],
@@ -718,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -727,17 +668,17 @@
      "text": [
       "Now compiling, should take ~10 seconds...\n",
       "\n",
-      "Finished in 8.2663860321 seconds.\n",
+      "Finished in 8.75739002228 seconds.\n",
       "\n",
       "Now running at low-resolution. Should take ~25 seconds...\n",
       "\n",
-      "\u001b[2KIt: 550 t=7.50 | 100.0%; ETA 0 s | t/h 3433.15 | gp/s 4.83e+05\n",
-      "Finished in 7.92072415352 seconds.\n",
+      "\u001b[2KIt: 550 t=7.50 | 100.0%; ETA 0 s | t/h 3362.30 | gp/s 4.73e+05\n",
+      "Finished in 8.0749578476 seconds.\n",
       "\n",
       "Now running at higher-resolution. Should take ~75 seconds...\n",
       "\n",
-      "\u001b[2KIt: 978 t=7.50 | 100.0%; ETA 0 s | t/h 1087.13 | gp/s 4.84e+05\n",
-      "Finished in 24.9056890011 seconds.\n"
+      "\u001b[2KIt: 978 t=7.50 | 100.0%; ETA 0 s | t/h 1143.38 | gp/s 5.09e+05It: 376 t=2.88 | 38.4%; ETA 15 s | t/h 1129.82 | gp/s 5.03e+05\n",
+      "Finished in 23.6547908783 seconds.\n"
      ]
     }
    ],
@@ -772,9 +713,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[33mYou are using pip version 18.1, however version 19.0.3 is available.\r\n",
+      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\r\n"
+     ]
+    }
+   ],
    "source": [
     "!pip install scipy > /dev/null"
    ]
@@ -789,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -856,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -883,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -894,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -930,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
@@ -981,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "metadata": {
     "scrolled": false
    },
