ShiftedKerrSchild: Fix the bug causing initial data Hamiltonian constraint violation not to converge

--- a/Tutorial-ADM_Initial_Data-ShiftedKerrSchild.ipynb
+++ b/Tutorial-ADM_Initial_Data-ShiftedKerrSchild.ipynb
@@ -181,7 +181,7 @@
     "gammaSphDD[0][0] = 1 + 2*M*r/rho2\n",
     "\n",
     "# gammaDD{r phi} = -a*gammaDD{r r}*sin^2(theta)\n",
-    "gammaSphDD[0][2] = -a*gammaSphDD[0][0]*sp.sin(th)**2\n",
+    "gammaSphDD[0][2] = gammaSphDD[2][0] = -a*gammaSphDD[0][0]*sp.sin(th)**2\n",
     "\n",
     "# gammaDD{theta theta} = rho^2\n",
     "gammaSphDD[1][1] = rho2\n",
@@ -273,10 +273,10 @@
     "KSphDD[0][0] = D*(A+2*M*r)/(A*A*B)*(4*M*(a*a*sp.cos(2*th)+a*a-2*r*r))\n",
     "\n",
     "# K_{r theta} = D/(AB)[8a^2*Mr*sin(theta)cos(theta)]\n",
-    "KSphDD[0][1] = D/(A*B)*(8*a*a*M*r*sp.sin(th)*sp.cos(th))\n",
+    "KSphDD[0][1] = KSphDD[1][0] = D/(A*B)*(8*a*a*M*r*sp.sin(th)*sp.cos(th))\n",
     "\n",
     "# K_{r phi} = D/A^2[-2aMsin^2(theta)(a^2cos(2theta)+a^2-2r^2)]\n",
-    "KSphDD[0][2] = D/(A*A)*(-2*a*M*sp.sin(th)**2*(a*a*sp.cos(2*th)+a*a-2*r*r))"
+    "KSphDD[0][2] = KSphDD[2][0] =  D/(A*A)*(-2*a*M*sp.sin(th)**2*(a*a*sp.cos(2*th)+a*a-2*r*r))"
    ]
   },
   {
@@ -306,7 +306,7 @@
     "KSphDD[1][1] = D/B*(4*M*r*r)\n",
     "\n",
     "# K_{theta phi} = D/(AB)*(-8*a^3*Mr*sin^3(theta)cos(theta))\n",
-    "KSphDD[1][2] = D/(A*B)*(-8*a**3*M*r*sp.sin(th)**3*sp.cos(th))\n",
+    "KSphDD[1][2] = KSphDD[2][1] = D/(A*B)*(-8*a**3*M*r*sp.sin(th)**3*sp.cos(th))\n",
     "\n",
     "# K_{phi phi} = D/(A^2*B)[2Mr*sin^2(theta)(a^4(M+3r)\n",
     "#   +4a^2r^2(2r-M)+4a^2r*cos(2theta)(a^2+r(M+2r))+8r^5)]\n",
@@ -418,7 +418,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-ADM_Initial_Data-ShiftedKerrSchild.ipynb to latex\n",
-      "[NbConvertApp] Writing 43479 bytes to Tutorial-ADM_Initial_Data-ShiftedKerrSchild.tex\n",
+      "[NbConvertApp] Writing 43840 bytes to Tutorial-ADM_Initial_Data-ShiftedKerrSchild.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
