Tutorial-BSSN_unrescaled_and_barred_vars: Fix LaTeX labels

--- a/Tutorial-BSSN_unrescaled_and_barred_vars.ipynb
+++ b/Tutorial-BSSN_unrescaled_and_barred_vars.ipynb
@@ -28,11 +28,11 @@
     "\n",
     "This module documents and constructs a number of quantities useful for building symbolic (SymPy) expressions needed in terms of unrescaled BSSN quantities (i.e., $\\left\\{h_{i j},a_{i j},\\phi, K, \\lambda^{i}, \\alpha, \\mathcal{V}^i, \\mathcal{B}^i\\right\\}$), including:\n",
     "\n",
-    "1. [Steps 1 & 2](#initializeNRPy): Initialize core NRPy+ modules\n",
-    "1. [Step 3](#BSSN_barred_metric_derivs_and_extrinsic_curvature): BSSN_barred_metric_derivs_and_extrinsic_curvature()\n",
+    "1. [Steps 1 & 2](#initializenrpy): Initialize core NRPy+ modules\n",
+    "1. [Step 3](#bssn_barred_metric_derivs_and_extrinsic_curvature): BSSN_barred_metric_derivs_and_extrinsic_curvature()\n",
     "    1. [Step 3.a](#gammabar): Barred 3-metric $\\bar{\\gamma}_{ij}$, $\\bar{\\gamma}^{ij}$\n",
     "    1. [Step 3.b](#gammabar_derivs): Spatial derivatives of $\\bar{\\gamma}_{ij}$, including $\\bar{\\Gamma}^{i}_{jk}$\n",
-    "    1. [Step 3.c](#Abar): Traceless, conformal extrinsic curvature $\\bar{A}_{ij}$, and $\\bar{A}^{ij}$\n",
+    "    1. [Step 3.c](#abar): Traceless, conformal extrinsic curvature $\\bar{A}_{ij}$, and $\\bar{A}^{ij}$\n",
     "1. Barred Ricci tensor $\\bar{R}_{ij}$, hatted covariant derivative of barred 3-metric $\\hat{D}_k \\bar{\\gamma}_{ij}$, $\\Delta^i_{jk} = \\bar{\\Gamma}^i_{jk} - \\hat{\\Gamma}^i_{jk}$, and $\\Delta^i = \\bar{\\gamma}^{jk} \\Delta^i_{jk}$:\n",
     "    1. [RicciBar__gammabarDD_dHatD__DGammaUDD__DGammaU()](#RicciBar__gammabarDD_dHatD__DGammaUDD__DGammaU)\n",
     "1. Unrescaled shift vector $\\beta^i$ and spatial derivatives $\\beta^i_{,j}$ and $\\beta^i_{,jk}$.\n",
@@ -47,11 +47,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='initializeNRPy'></a>\n",
+    "<a id='initializenrpy'></a>\n",
     "\n",
     "## Steps 1 & 2: Initialize core NRPy+ modules, and set spatial dimension DIM=3 \\[Back to [top](#top)\\]\n",
     "\n",
-    "$$\\label{initializeNRPy}$$"
+    "$$\\label{initializenrpy}$$"
    ]
   },
   {
@@ -91,10 +91,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='BSSN_barred_metric_derivs_and_extrinsic_curvature'></a>\n",
+    "<a id='bssn_barred_metric_derivs_and_extrinsic_curvature'></a>\n",
     "\n",
     "## Step 3: Barred 3-metric $\\bar{\\gamma}_{ij}$, $\\bar{\\gamma}^{ij}$, needed spatial derivatives of $\\bar{\\gamma}_{ij}$ including $\\bar{\\Gamma}^{i}_{jk}$, and extrinsic curvature $\\bar{A}_{ij}$, and $\\bar{A}^{ij}$ \\[Back to [top](#top)\\]\n",
-    "$$\\label{BSSN_barred_metric_derivs_and_extrinsic_curvature}$$\n",
+    "$$\\label{bssn_barred_metric_derivs_and_extrinsic_curvature}$$\n",
     "\n",
     "<a id='gammabar'></a>\n",
     "\n",
@@ -250,11 +250,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='Abar'></a>\n",
+    "<a id='abar'></a>\n",
     "\n",
     "### Step 3.c: Trace-free conformal extrinsic curvature $\\bar{A}_{ij}$ and its contravariant version $\\bar{A}^{ij}$ \\[Back to [top](#top)\\]\n",
     "\n",
-    "$$\\label{Abar}$$\n",
+    "$$\\label{abar}$$\n",
     "\n",
     "The trace-free conformal extrinsic curvature $\\bar{A}_{ij}$ is related to the BSSN rescaled quantity $a_{ij}$ and the rescaling matrix via:\n",
     "$$\n",
@@ -392,7 +392,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-BSSN_unrescaled_and_barred_vars.ipynb to latex\n",
-      "[NbConvertApp] Writing 49090 bytes to Tutorial-BSSN_unrescaled_and_barred_vars.tex\n",
+      "[NbConvertApp] Writing 48347 bytes to Tutorial-BSSN_unrescaled_and_barred_vars.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
