NRPyPlus_Tutorial main page: Small rewording

--- a/NRPyPlus_Tutorial.ipynb
+++ b/NRPyPlus_Tutorial.ipynb
@@ -35,7 +35,7 @@
     "    + Solving the Wave Equation with the <font color='green'>**Einstein Toolkit**</font> (*Courtesy Patrick Nelson*)\n",
     "        + [<font color='green'>**IDScalarWaveNRPy**</font>: Plane-wave initial data module for the scalar wave equation](Tutorial-ETK_thorn-IDScalarWaveNRPy.ipynb) \n",
     "        + [<font color='green'>**WaveToyNRPy**</font>: Solving the scalar wave equation, using the method of lines](Tutorial-ETK_thorn-WaveToyNRPy.ipynb)\n",
-    "+ Application (in progress): [Two Vector-Potential Formulations of **Maxwell's Equations** in Cartesian Coordinates](Tutorial-MaxwellCartesian.ipynb). (Formulations based on [Illustrating Stability Properties of Numerical Relativity in Electrodynamics](https://arxiv.org/abs/gr-qc/0201051) by Knapp, Walker, and Baumgarte.) (*Courtesy Patrick Nelson*)\n",
+    "+ Application (in progress): [Two Formulations of **Maxwell's Equations** in Cartesian Coordinates](Tutorial-MaxwellCartesian.ipynb). (Formulations based on [Illustrating Stability Properties of Numerical Relativity in Electrodynamics](https://arxiv.org/abs/gr-qc/0201051) by Knapp, Walker, and Baumgarte.) (*Courtesy Patrick Nelson*)\n",
     "    + [<font color='green'>**IDMaxwellNRPy**</font>: An <font color='green'>**Einstein Toolkit**</font> initial data thorn for Maxwell's equations](Tutorial-ETK_thorn-IDMaxwellNRPy.ipynb)\n",
     "    + [<font color='green'>**MaxwellEvol**</font>: Solving Maxwell's equations in the <font color='green'>**Einstein Toolkit**</font> using the method of lines](Tutorial-ETK_thorn-MaxwellEvol.ipynb)\n",
     "\n",
@@ -82,21 +82,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
